[project]
name = "investigator-ai"
version = "0.1.0"
description = "Multi-Agent Investigation Engine using Google Gemini."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "celery==5.3.6",
    "redis==5.0.4",
    "sqlalchemy==2.0.30",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "google-generativeai==0.5.4",
    "prometheus-client==0.20.0",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]